kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shortener
  template:
    metadata:
      labels:
        app: shortener
    spec:
      containers:
      - name: shortener
        image: ghcr.io/asankov/shortener:main
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shortener
spec:
  type: ClusterIP
  selector:
    app: shortener
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
